mobile header fixed and info spacing corrected

--- a/style.css
+++ b/style.css
@@ -85,8 +85,8 @@ nav li {
     display: none;
   }
 
-  header.mobile {
-    display: inline-flex;
+  header .mobile {
+    display: flex;
     width: 100%;
     justify-content: space-between;
     align-items: center;
@@ -123,10 +123,10 @@ main {
 
 .banner-text h1 {
   font-size: 3.3rem;
-  line-height: .9;
+  line-height: 0.9;
   font-weight: bolder;
   padding-bottom: 1.5rem;
-  white-space: pre-line;l;;
+  white-space: pre-line;
 }
 
 .banner-text h3 {
@@ -138,7 +138,7 @@ main {
 
 .cta-button {
   padding: 0.5px;
-  width: 95%;
+  width: 100%;
   font-size: 1.3rem;
   color: white;
   cursor: pointer;
@@ -188,7 +188,7 @@ main {
 
 .information {
   display: flex;
-  border-bottom: #E0E2E2 solid 2px;
+  border-bottom: #e0e2e2 solid 2px;
 }
 
 .mobile {
@@ -200,6 +200,7 @@ main {
   width: 60%;
   display: flex;
   padding: 2rem 1.5rem;
+  border-right: 2px #d8d8d8 solid;
 }
 
 .quote {
@@ -216,38 +217,44 @@ figcaption {
   width: 40%;
   display: flex;
   flex-direction: column;
-  justify-content:first-baseline;
+  justify-content:center;
 }
 
 .event {
-  border: 3px #E0E2E2 solid;
+  border-top: 2px #d8d8d8 solid;
   width: 100%;
   display: flex;
   flex-direction: row;
 }
 
 .gray.event {
-  background-color: #D8D8D8;
+  background-color: #d8d8d8;
 }
 
 .link {
-  color: #5F9DE4;
+  color: #5f9de4;
 }
 
 .thumbnail {
   width: 35%;
   height: auto;
-  padding: 1rem;
+  margin: 1rem;
 }
 
 .info {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-
+  justify-content: center;
+  margin-left: 0.5rem;
 }
 
+.info h3 {
+  margin-bottom: 0.5rem;
+}
 
+.info p {
+  margin-bottom: 0.5rem;
+}
 
 .information h2 {
   font-size: 2rem;
@@ -255,7 +262,16 @@ figcaption {
   font-weight: bolder;
   padding-bottom: 1.5rem;
   padding-top: 2rem;
-  white-space:nowrap;
+}
+
+.quote {
+  margin: 0px 0.5rem;
+}
+
+blockquote {
+  font-size: 1.1rem;
+  line-height: 2rem;
+  color: dimgrey;
 }
 
 /* mobile infomation */
@@ -264,10 +280,11 @@ figcaption {
     display: none;
   }
 
-  img.mobile {
-    width: 100%;
+
+
+  .thumbnail.mobile {
+    width: auto;
     display: flex;
-    flex-direction: column;
   }
 
   .schedule {
@@ -277,5 +294,16 @@ figcaption {
   .event {
     display: flex;
     flex-direction: column;
+    padding: .5rem;
   }
+
+.info {
+  margin-left: 2rem;
+  margin-bottom: 2rem;
+}
+
+.gray.event {
+  background-color:unset;
+}
+ 
 }
